--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -18,3 +18,8 @@ ul, li {
     margin: 0;
     padding: 0;
 }
+input[type="submit" i]{
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
