--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,7 @@ html{
 
 body{
     font-family: "Manrope", sans-serif;
-    font-size: 16px;
+    font-size: clamp(0.88rem, calc(0.81rem + 0.27vw), 1rem);
     line-height: 140%;
     font-weight: 300;
     font-variant-numeric: lining-nums proportional-nums;
@@ -25,7 +25,7 @@ h1{
 h2{
     font-family: "PlayfairDisplay", serif;
     font-weight: 800;
-    font-size: 82px;
+    font-size: clamp(2rem, calc(0.38rem + 6.67vw), 5.13rem);
     line-height: 110%;
     color: var(--bege-dark);
 }
@@ -121,8 +121,8 @@ video{
     object-fit: cover;
 }
 .container{
-    max-width: 1160px;
-    padding: 0 10px;
+    max-width: 1180px;
+    padding: 0 20px;
     margin: 0 auto;
 }
 .lead{
@@ -133,14 +133,14 @@ video{
 .big-title{
     font-family: "PlayfairDisplay", serif;
     font-weight: 800;
-    font-size: 100px;
+    font-size: clamp(2rem, calc(-0.21rem + 9.07vw), 6.25rem);
     line-height: 110%;
     color: var(--bege-dark);
     text-align: center;
 }
 .t-20, b{
     font-weight: 600;
-    font-size: 20px;
+    font-size: clamp(1.13rem, calc(1.06rem + 0.27vw), 1.25rem);
     line-height: 140%;
 
 }
@@ -149,6 +149,7 @@ video{
     line-height: 140%;
 }
 .btn{
+    position: relative;
     display: inline-block;
     padding: 14px 36px;
     background-color: var(--yellow);
@@ -156,8 +157,10 @@ video{
     font-size: 20px;
     font-weight: 500;
     letter-spacing: 0.12em;
+    text-align: center;
     border-radius: 50px;
     transition: all 0.3s;
+    z-index: 997;
 }
 .btn:hover{
     background-color: var(--pistachio);
@@ -175,7 +178,7 @@ video{
 .citate-author {
     font-family: "PlayfairDisplay", sans-serif;
     font-style: normal;
-    font-size: 32px;
+    font-size: clamp(1.25rem, calc(0.86rem + 1.6vw), 2rem);
     font-weight: 500;
     line-height: 130%;
     color: var(--bege-dark);
@@ -208,9 +211,10 @@ video{
 }
 .citate{
     font-family: "PlayfairDisplay", serif;
-    font-size: 32px;
+    font-size: clamp(1.25rem, calc(0.86rem + 1.6vw), 2rem);
     line-height: 130%;
 }
+
 // ============ POST NAVIGATION ================
 
 .post-navigation{
@@ -361,7 +365,6 @@ form {
     }
     .nav-links{
        .page-numbers{
-        display: block;
         font-size: 14px;
         font-weight: 700;
         letter-spacing: 0;
@@ -374,6 +377,7 @@ form {
         display: flex;
         justify-content: center;
         align-items: center;
+        flex: 0 0 auto;
         &.current{
             background-color: var(--pistachio);
             border: 1px solid var(--pistachio);
@@ -392,6 +396,12 @@ form {
         background-image: url(../img/icons/next.svg);
     }
     }
+}
+@media (max-width: 374px) {
+    .navigation .nav-links {
+        gap: 15px;
+    }
+    
 }
 // ============================================
 //  Header =====================
@@ -436,7 +446,7 @@ form {
     z-index: 999;
 }
 
-@media (max-width: 748px) {
+@media (max-width: 768px) {
     .header{
         padding: 8px 0px;
         &__nav{
@@ -550,7 +560,7 @@ form {
     padding: 72px 0 98px;
     &__wrapper{
         display: flex;
-        gap: 128px;
+        gap: clamp(2.5rem, calc(-8.85rem + 23.66vw), 8rem);
     }
     &__info{
         max-width: 555px;
@@ -576,6 +586,7 @@ form {
         }
     }
 }
+
 .new-home{
     background-color: var(--light);
     padding-top: 70px;
@@ -609,7 +620,7 @@ form {
             .new-home__item--title {
                 font-family: "PlayfairDisplay", serif;
                 font-weight: 700;
-                font-size: 32px;
+                font-size: clamp(1.38rem, calc(1.05rem + 1.33vw), 2rem);
                 line-height: 110%;
                 color: var(--bege-dark);
                 transition: all 0.3s;
@@ -680,7 +691,96 @@ form {
 }
 @media (max-width: 1024px){
     .hero-home{
-        min-height: 85vh;
+        min-height: 74vh;
+    }
+    
+}
+@media (max-width: 768px){
+    .about-home__wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+    .about-home__img{
+        margin-left: 0;
+    }
+    .new-home__item {
+        width: 48%;
+    }
+    .new-home__item.big {
+        width: 48%;
+    }
+    .new-home__item.item-blog .new-home__item--img{
+        width: 100%;
+    }
+}
+@media (max-width: 576px){
+    .hero-home {
+        margin-bottom: 50%;
+        min-height: auto;
+    }
+    .hero-home__img {
+        position: relative;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 69vw;
+        margin-top: -15%;
+    }
+    .hero-home .btn{
+        width: 100%;
+        margin-top: 40px;
+    }
+    .new-home__item {
+        width: 100%;
+    }
+    .new-home__item.big {
+        width: 100%;
+    }
+    .new-home__item.item-blog .new-home__item--img{
+        width: 60%;
+    }
+    .new-home__item.big.item-blog.blog__item, .new-home__item.big{
+        padding: 40px 0 0;
+    }
+    .new-home__item.big {
+        padding-bottom: 40px;
+    }
+    .new-home__item.big.item-blog.blog__item .new-home__item--img{
+        aspect-ratio: 1.4 / 1;
+    }
+    .new-home__item.big.item-blog.blog__item .new-home__item--img img{
+        object-fit: cover;
+        height: 100%;
+    }
+    .new-home__item.item-biseness .new-home__item--img{
+        width: 137px;
+        height: 137px;
+    }
+}
+@media (max-width: 440px){
+    .about-home {
+        padding: 40px 0;
+    }
+    .about-home__img{
+        max-width: 134px;
+    }
+    .about-home h2{
+        text-align: center;
+    }
+    .about-home__subtitle {
+        text-align: center;
+    }
+    .about-home__info .btn {
+        width: 100%;
+    }
+    .new-home {
+        padding-top: 50px;
+    }
+    .new-home h2 {
+        margin-bottom: 50px;
+    }
+    .new-home .btn {
+        width: 100%;
     }
 }
 
@@ -705,7 +805,7 @@ form {
     }
     &__excerpt{
         font-family: "PlayfairDisplay", sans-serif;
-        font-size: 32px;
+        font-size: clamp(1.38rem, calc(1.05rem + 1.33vw), 2rem);
         line-height: 110%;
         font-style: normal;
         font-weight: 700;
@@ -738,6 +838,7 @@ form {
     }
 }
 .about-diet{
+    margin-bottom: clamp(3.13rem, calc(-1.2rem + 17.73vw), 11.44rem);
     .container{
         position: relative;
     }
@@ -745,8 +846,8 @@ form {
         position: absolute;
         top: 54px;
         right: 220px;
+        z-index: -1;
     }
-    margin-bottom: 183px;
     a{
         text-decoration: underline;
     }
@@ -792,13 +893,40 @@ form {
 
     }
 }
-
+@media (max-width: 854px){
+.about-diet__author{
+    flex-direction: column;
+}
+}
+@media (max-width: 560px) {
+    .about-me__content{
+        margin-left: 0;
+    }
+    .about-me__content p{
+        margin-right: 0;
+    }
+    .about-me__accent, .about-diet__cats{
+        flex-direction: column;
+    }
+    .about-diet__cats {
+        align-items: center;
+        margin: 0;
+        margin-top: 30px;
+    }
+    .about-me__accent--img {
+        margin-bottom: 20px;
+    }
+    .about-diet__content{
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
 // =============== BLOG PAGE ================
 
 .blog {
     background-color: var(--light);
     padding-top: 71px;
-    padding-bottom: 146px;
+    padding-bottom: clamp(6.25rem, calc(4.84rem + 6.01vw), 9.13rem);
     h1{
         text-align: center;
         color: var(--bege-dark);
@@ -841,7 +969,11 @@ form {
         margin-bottom: 30px;
     }
 }
-
+@media (max-width: 440px) {
+    .blog__tags {
+        width: 100%;
+    }
+}
 // =====================================
 
 // ========== POST PAGE ===============
@@ -1064,5 +1196,10 @@ form {
   
     to {
       opacity: 1;
+    }
+  }
+  @media (max-width: 374px) {
+    .hero-home h1{
+        font-size: 48px;
     }
   }
