--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -106,7 +106,7 @@ ol li:before {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-
+    overflow-x: hidden;
 }
 .main{
     flex: 1 1 auto;
